language/move-prover/tests/sources/functional/nested_invariants.exp
Move prover returns: exiting with boogie verification errors
error: data invariant does not hold

    ┌── tests/sources/functional/nested_invariants.move:16:9 ───
    │
 16 │         invariant x > 0;
    │         ^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/nested_invariants.move:64: mutate_inner_data_invariant_invalid
    =     at tests/sources/functional/nested_invariants.move:16
    =     at tests/sources/functional/nested_invariants.move:64: mutate_inner_data_invariant_invalid
    =     at tests/sources/functional/nested_invariants.move:29
    =     at tests/sources/functional/nested_invariants.move:32
    =     at tests/sources/functional/nested_invariants.move:64: mutate_inner_data_invariant_invalid
    =         o = <redacted>
    =     at tests/sources/functional/nested_invariants.move:65: mutate_inner_data_invariant_invalid
    =         r = <redacted>
    =     at tests/sources/functional/nested_invariants.move:66: mutate_inner_data_invariant_invalid
    =     at tests/sources/functional/nested_invariants.move:29
    =     at tests/sources/functional/nested_invariants.move:32
    =     at tests/sources/functional/nested_invariants.move:16

error: data invariant does not hold

    ┌── tests/sources/functional/nested_invariants.move:32:9 ───
    │
 32 │         invariant n.x < y;
    │         ^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/nested_invariants.move:58: mutate_outer_data_invariant_invalid
    =     at tests/sources/functional/nested_invariants.move:16
    =     at tests/sources/functional/nested_invariants.move:58: mutate_outer_data_invariant_invalid
    =     at tests/sources/functional/nested_invariants.move:29
    =     at tests/sources/functional/nested_invariants.move:32
    =     at tests/sources/functional/nested_invariants.move:58: mutate_outer_data_invariant_invalid
    =         o = <redacted>
    =     at tests/sources/functional/nested_invariants.move:59: mutate_outer_data_invariant_invalid
    =         r = <redacted>
    =     at tests/sources/functional/nested_invariants.move:60: mutate_outer_data_invariant_invalid
    =     at tests/sources/functional/nested_invariants.move:29
    =     at tests/sources/functional/nested_invariants.move:32

error: data invariant does not hold

    ┌── tests/sources/functional/nested_invariants.move:16:9 ───
    │
 16 │         invariant x > 0;
    │         ^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/nested_invariants.move:47: new_inner_data_invariant_invalid
    =     at tests/sources/functional/nested_invariants.move:16

error: data invariant does not hold

    ┌── tests/sources/functional/nested_invariants.move:32:9 ───
    │
 32 │         invariant n.x < y;
    │         ^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/nested_invariants.move:43: new_outer_data_invariant_invalid
    =     at tests/sources/functional/nested_invariants.move:16
    =     at tests/sources/functional/nested_invariants.move:43: new_outer_data_invariant_invalid
    =     at tests/sources/functional/nested_invariants.move:29
    =     at tests/sources/functional/nested_invariants.move:32
